slurm/k8s_mega_v2/practice/12.istio/psp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
