slurm/k8s_mega_v2/practice/12.istio/kiali-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "kiali.s<номер студента>.edu.slurm.io"
  gateways:
  - istio-ingressgateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
